--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: update
       run: sudo apt-get update
     - name: install python
-      run: sudo apt-get install python3 python3-pip python3-dev python3-setuptools build-essential python3-sphinx python-sphinx python-configparser
+      run: sudo apt-get install python3 python3-pip python3-dev python3-setuptools build-essential python-sphinx python-sphinx python-configparser
     - name: install build essentials
       run: sudo apt-get install -y ninja-build glib-2.0-dev libudev-dev libyaml-dev libsystemd-dev clang gperf libcap-dev build-essential
     - name: build
