Fix unit Documentation

--- a/units/systemd-netlogd.service.in
+++ b/units/systemd-netlogd.service.in
@@ -3,7 +3,7 @@
 
 [Unit]
 Description=Journal Syslog Unicast and Multicast Daemon
-Documentation=man:systemd-netlogd.conf(5)
+Documentation=man:systemd-netlogd(8)
 After=network.target
 
 [Service]
