--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,40 @@
-*.a
 *.cache
-*.html
-*.la
-*.lo
-*.log
-*.o
 *.plist
-*.pyc
-*.stamp
+*.py[co]
 *.swp
 *.trs
 *~
 .config.args
+.gdb_history
 .deps/
-.dirstamp
-.libs/
+.mypy_cache/
+__pycache__/
 /*.gcda
 /*.gcno
 /*.tar.bz2
 /*.tar.gz
 /*.tar.xz
-/build-aux
-/libtool
-/TAGS
 /GPATH
 /GRTAGS
 /GSYMS
 /GTAGS
-/systemd-netlogd
-Makefile.in
-aclocal.m4
-config.h
-config.h.in
-config.log
-config.status
-configure
-stamp-*
+/TAGS
+/ID
+/build*
+/coverage/
+/image.raw
+/.#image.raw.lck
+/image.raw.cache-pre-dev
+/image.raw.cache-pre-inst
+/image.raw.manifest
+/install-tree
+/.mkosi-*
+/mkosi.builddir/
+/mkosi.output/
+/mkosi.installdir/
+/mkosi.key
+/mkosi.crt
+mkosi.local.conf
+/tags
+.dir-locals-2.el
+.vscode/
