--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('systemd-netlogd', 'c',
         version : '1.4.1',
-        license : 'LGPLv2+',
+        license : 'LGPL-2.1-or-later',
         default_options: [
                 'c_std=gnu11',
                 'prefix=/usr/lib/systemd',
