Add option TLSServerCertificate=
Support specifying a path to a custom certificate, e.g. for self-signed
certificates.

--- a/conf/netlogd.conf.in
+++ b/conf/netlogd.conf.in
@@ -2,6 +2,7 @@
 #Address=239.0.0.1:6000
 #Protocol=udp
 #TLSCertificateAuthMode=deny
+#TLSServerCertificate=
 #LogFormat=rfc5424
 #Directory=
 #Namespace=
