Add comprehensive test suite and CI integration
This commit introduces a test infrastructure using cmocka to improve code
reliability and prevent regressions. The test suite includes:

- Unit tests for RFC 3339 timestamp formatting
- Unit tests for protocol, log format, facility, and level string table conversions
- CI integration to automatically run tests on every build

Test Coverage:
- test-protocol: Tests RFC 3339 timestamp formatting with various inputs
  including specific timestamps, NULL values, and structure validation
- test-string-tables: Tests all string table lookup functions for
  protocols (UDP/TCP/TLS/DTLS), log formats (RFC 5424/5425/3339),
  syslog facilities, and syslog levels

Build System:
- Added tests/meson.build for test compilation
- Tests are optional and only built when cmocka is available
- Updated main meson.build to include tests subdirectory

CI Improvements:
- Added libcmocka-dev to CI dependencies
- Added "run tests" step to execute tests after build
- Tests run with verbose output for better debugging

All tests passing (7 total: 3 protocol + 4 string-tables).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,11 @@ jobs:
     - name: update
       run: sudo apt-get update
     - name: install build essentials
-      run: sudo apt-get install -y python3-sphinx ninja-build meson glib-2.0-dev libudev-dev libsystemd-dev clang gperf libcap-dev build-essential
+      run: sudo apt-get install -y python3-sphinx ninja-build meson glib-2.0-dev libudev-dev libsystemd-dev clang gperf libcap-dev build-essential libcmocka-dev
     - name: build
       run: make
+    - name: run tests
+      run: meson test -C build -v
     - name: install
       run: sudo make install
     - name: add systemd-journal-netlog user
