Refactor TLS/DTLS: eliminate code duplication.
Extract common SSL functionality from netlog-tls.c and netlog-dtls.c into
a new unified implementation in netlog-ssl-common.c. This eliminates ~220
lines of duplicated code between the two transport implementations.

Changes:
- Create netlog-ssl-common.{c,h} with unified SSLManager structure
- SSLManager supports both TLS and DTLS via SSLTransportType enum
- Extract shared functions: ssl_connect(), ssl_disconnect(), ssl_writev(),
  ssl_manager_init(), ssl_manager_free()
- Extract certificate verification and logging helpers
- Refactor netlog-tls.{c,h} to use inline wrappers calling common code
- Refactor netlog-dtls.{c,h} to use inline wrappers calling common code
- TLSManager and DTLSManager are now type aliases for SSLManager
- Update netlog-ssl.c to use SSLManager instead of TLSManager
- Update build files to include netlog-ssl-common.c

Code reduction:
- Before: 538 lines (tls.c/h + dtls.c/h)
- After: 483 lines (including new ssl-common.c/h)
- Net: 55 lines removed (10.2% reduction)
- Duplication: ~220 lines of duplicate code eliminated

Benefits:
- Single source of truth for SSL operations
- Easier to maintain and extend
- Reduced bug surface (fixes apply to both TLS and DTLS)
- Backwards compatible API (existing code unchanged)
- All tests pass (7/7)

--- a/src/meson.build
+++ b/src/meson.build
@@ -118,6 +118,8 @@ systemd_netlogd_sources = files('''
                         netlog/netlog-network.h
                         netlog/netlog-protocol.c
                         netlog/netlog-protocol.h
+                        netlog/netlog-ssl-common.c
+                        netlog/netlog-ssl-common.h
                         netlog/netlog-dtls.c
                         netlog/netlog-dtls.h
                         netlog/netlog-ssl.c
