--- a/tests/meson.build
+++ b/tests/meson.build
@@ -15,6 +15,7 @@ if cmocka.found()
                 '../src/netlog/netlog-protocol.c',
                 '../src/netlog/netlog-network.c',
                 '../src/netlog/netlog-manager.c',
+                '../src/netlog/netlog-ssl-common.c',
                 '../src/netlog/netlog-tls.c',
                 '../src/netlog/netlog-dtls.c',
                 '../src/netlog/netlog-ssl.c',
@@ -28,6 +29,7 @@ if cmocka.found()
                 'test-string-tables.c',
                 '../src/netlog/netlog-manager.c',
                 '../src/netlog/netlog-network.c',
+                '../src/netlog/netlog-ssl-common.c',
                 '../src/netlog/netlog-tls.c',
                 '../src/netlog/netlog-dtls.c',
                 '../src/netlog/netlog-ssl.c',
