Refactor netlog-manager.c: split into focused modules.
Split the monolithic 740-line netlog-manager.c into three focused modules
for better maintainability and code organization.

New modules:
- netlog-journal.{c,h}: Journal reading, parsing, and event handling (~325 lines)
  - parse_field(), parse_fieldv() - Field parsing
  - journal_read_input() - Parse journal entries
  - journal_process_input() - Process journal queue
  - journal_event_handler() - Handle journal events
  - journal_open() - Open journal
  - journal_monitor_listen() - Set up monitoring
  - journal_close_input() - Cleanup

- netlog-state.{c,h}: State file persistence (~71 lines)
  - state_update_cursor() - Save cursor to disk
  - state_load_cursor() - Load cursor from disk

- netlog-manager.c: Core manager orchestration (~366 lines, down from 740)
  - String tables (protocol, log format, facility, level)
  - Connection management (connect/disconnect/retry)
  - Network monitoring
  - Lifecycle (new/free)
  - Signal handling

Benefits:
- Better separation of concerns (journal, state, core)
- Easier to test individual components
- Clearer code organization and navigation
- Reduced manager.c complexity (740 → 366 lines)
- All tests pass (7/7)

Total line count: 762 lines (+22 from headers/includes)
- Manager reduced by 50% (740 → 366)
- Journal: 325 lines (self-contained module)
- State: 71 lines (simple, focused module)

--- a/src/meson.build
+++ b/src/meson.build
@@ -114,6 +114,10 @@ systemd_netlogd_sources = files('''
                         netlog/netlog-conf.c
                         netlog/netlog-manager.c
                         netlog/netlog-manager.h
+                        netlog/netlog-journal.c
+                        netlog/netlog-journal.h
+                        netlog/netlog-state.c
+                        netlog/netlog-state.h
                         netlog/netlog-network.c
                         netlog/netlog-network.h
                         netlog/netlog-protocol.c
