--- a/tests/meson.build
+++ b/tests/meson.build
@@ -15,6 +15,8 @@ if cmocka.found()
                 '../src/netlog/netlog-protocol.c',
                 '../src/netlog/netlog-network.c',
                 '../src/netlog/netlog-manager.c',
+                '../src/netlog/netlog-journal.c',
+                '../src/netlog/netlog-state.c',
                 '../src/netlog/netlog-ssl-common.c',
                 '../src/netlog/netlog-tls.c',
                 '../src/netlog/netlog-dtls.c',
@@ -28,6 +30,8 @@ if cmocka.found()
                 'test-string-tables',
                 'test-string-tables.c',
                 '../src/netlog/netlog-manager.c',
+                '../src/netlog/netlog-journal.c',
+                '../src/netlog/netlog-state.c',
                 '../src/netlog/netlog-network.c',
                 '../src/netlog/netlog-ssl-common.c',
                 '../src/netlog/netlog-tls.c',
